--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title><%= typeof(title) == "undefined" ? 'OurKatbin' : `${title} | OurKatbin` %></title>
+    <title><%= typeof(title) == "undefined" ? 'OurKatbin' : `${title} | E-Athene` %></title>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link
       rel="stylesheet"
@@ -26,7 +26,7 @@
         class="container d-flex flex-column flex-md-row align-items-center p-3"
       >
         <h4 class="my-0 mr-md-auto font-weight-normal">
-          <a href="/" class="text-white">OurApp</a>
+          <a href="/" class="text-white">My E-Athene</a>
         </h4>
         <% if( user ) { %>
         <div class="flex-row my-3 my-md-0">
